# workbench

./: .gitignore
Data-structures-and-Algorithms/: plan.md  strivers_a2z.md  test.js
Express/: package.json
Javascript-Experiments/: README.md  index.html
Manim/: 2ndlec.py  3rdlec.py  4thlec.py  sample.py  squareandcircle.py  squaretocircle.py  test.py
Nodejs/: index.js
Redis/: data-structures.js  pub-sub.js
adonisjs/: note.md
authentiation_authorization/: note.md
awk/: note.md  sample.txt
bash/: arithmetic-expression  associative_arrays  case  command-substituion  conditionals  forloops  functions.sh  ifs_variable  indexed-arrays  loop.sh  process-substitution  progress_bar.sh  read-input  userinput
bullmq/: package.json  pnpm-lock.yaml  queue.js  tsconfig.json  worker.js
bun/: note.md
chromadb/: Untitled.ipynb  pyproject.toml
circuit_breaker/: pnpm-lock.yaml
circuit_breaker_with_opposum/: note.md  package.json  server.js
devtooling/: chatgpt.md  reddit.md
docker/: Dockerfile  docker-compose.yml
encryption-algs/: aes.md  sp-networks.md
express_unit_testing/: jest.config.ts  package.json
expressjs/: docker-compose.yml  package.json  tsconfig.json
fastapi/: database.py  main.py  pyproject.toml
flutter/: .gitignore
gemini_api/: index.js  package.json
go/: .gitignore  note.md
graphql/: MOCK_DATA.json  data.js  index.js  note.md  package.json
grpc/: note.md
honojs/: package.json
htmx_with_hono/: note.md
langgraph_experiments/: pyproject.toml
langgraph_experiments/1.ChatBot/: 1-basicchatbot.ipynb  humanintheloop.ipynb
(+2195 files in other folders)
